--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -26,11 +26,11 @@
                             <h5 class="card-title">Login</h5>
                         </div>
                         <div class="card-body">
-                            <form action="" method="POST">
+                            <form action="/Login/Index" method="POST">
                                 <div class="form-group row align-items-center">
                                     <label class="txt col-md-4 col-form-label text-md-right">Enter Email</label>
                                     <div class="col-md-8">
-                                        <input type="email" name="id" value="" class="form-control" required />
+                                        <input type="email" name="email" value="" class="form-control" required />
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-center" style="margin-top: 0.8em;">
