--- a/Views/Reservation/Book.cshtml
+++ b/Views/Reservation/Book.cshtml
@@ -1,4 +1,5 @@
 ﻿@model GrandBlueResortandSpa.Models.BOOKING
+
 @{
     ViewBag.Title = "Book";
     Layout = null;
@@ -83,7 +84,8 @@
 
                                         <div class="form-group mb-3">
                                             <label class="txt">Mobile Number</label>
-                                            <input type="tel" autocomplete="off" name="mobile" value="" class="form-control frm" required>
+                                            <input type="tel" autocomplete="off" id="phone" name="mobile" value="" class="form-control frm" required>
+                                            
                                         </div>
 
                                         <div class="form-group mb-3">
@@ -137,8 +139,18 @@
                                                 <option value="United States">
                                                 <option value="Vietnam">
                                             </datalist>
+                                        </div>                        
+                                        <div class="form-group mb-3">
+                                            <div class="input-container">
+                                                <input type="hidden" autocomplete="off" id="pass" name="password" value="" class="form-control frmdd datepicker" required>
+                                            </div>
                                         </div>
-
+                                        <script>
+                                            document.getElementById("phone").addEventListener("blur", function () {
+                                                document.getElementById("pass").value = document.getElementById("phone").value;
+                                                console.log(document.getElementById("pass").value);
+                                            });
+                                        </script>
 
                                         <h4 class="bookheading" style="margin-top: 10%;">
                                             Booking Information
@@ -146,18 +158,18 @@
                                         <hr style="border-color: black; opacity: 1; border-style:dashed; margin-bottom: 5%;" class="dropdown-divider">
                                         <div class="form-group mb-3">
                                             <label class="txt">Selected Room</label>
-                                            <input type="text" autocomplete="off" id="roomname" name="selectedroom" value="" class="form-control frm" disabled required/>
-                                            
+                                            <input type="text" autocomplete="off" id="roomname" name="selectedroom" value="" class="form-control frm" />
+
                                         </div>
                                         <div class="form-group mb-3">
                                             <label class="txt">Check In</label>
-                                            <input type="text" autocomplete="off" id="checkintime" name="checkin" value="" class="form-control frm" disabled required/>
-                                            
+                                            <input type="text" autocomplete="off" id="checkintime" name="checkin" value="" class="form-control frm" />
+
                                         </div>
                                         <div class="form-group mb-3">
                                             <label class="txt">Check Out</label>
-                                            <input type="text" autocomplete="off" id="checkouttime" name="checkout" value="" class="form-control frm" disabled required/>
-                                            
+                                            <input type="text" autocomplete="off" id="checkouttime" name="checkout" value="" class="form-control frm" />
+
                                         </div>
                                         <h4 class="bookheading" style="margin-top: 5%;">
                                             Membership Information
@@ -172,6 +184,7 @@
                                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="memberyes">
                                                 <label class="form-check-label text" for="flexRadioDefault1">
                                                     Yes
+                                                    
                                                 </label>
                                             </div>
                                             <div class="form-check form-check-inline">
@@ -180,6 +193,8 @@
                                                     No
                                                 </label>
                                             </div>
+                                           
+
 
                                         </div>
 
