--- a/Views/Reservation/Index.cshtml
+++ b/Views/Reservation/Index.cshtml
@@ -144,7 +144,7 @@
                                 <div class="card">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <img src="~/Content/images/Rooms & Suites/OceanSideVilla/Villa.png" class="card-img-top" alt="...">
+                           `                 <img src="~/Content/images/Rooms & Suites/OceanSideVilla/Villa.png" class="card-img-top" alt="...">
                                         </div>
                                         <div class="col-md-7">
                                             <div class="card-body">
