--- a/Views/Login/Profile.cshtml
+++ b/Views/Login/Profile.cshtml
@@ -49,8 +49,8 @@
                                 </li>
                             </ul>
                             <!--Logout Work Need to be Done-->
-                            <a href="">
-                                <button id="logoutbtn" type="button" class="btn btn-danger navtext">
+                            <a href="/Login/Logout">
+                                <button id="logoutbtn" name="logout" type="button" class="btn btn-danger navtext">
                                     Logout <i class="fa fa-sign-out"></i>
                                 </button>
                             </a>
