--- a/Views/Login/Profile.cshtml
+++ b/Views/Login/Profile.cshtml
@@ -225,7 +225,7 @@
         </div>
         <div class="footer">
             <p id="cpyrttext">
-                © Copyright 2021 GrandBlue Resort & Spa. | All Rights Reserved | Powered by SNASBI
+                © Copyright 2021 GrandBlue Resort & Spa. | All Rights Reserved | Powered by ATR
             </p>
         </div>
     </div>
