--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -36,8 +36,9 @@
                                 <div class="form-group row align-items-center" style="margin-top: 0.8em;">
                                     <label class="txt col-md-4 col-form-label text-md-right">Password</label>
                                     <div class="col-md-8">
-                                        <input type="password" name="password" value="" class="form-control" minlength="6" required />
+                                        <input type="password" name="password" value="" minlength="6" class="form-control" required />
                                     </div>
+                                    
                                 </div>
                                 <div class="form-group" style="float: right; margin-top: 2%;">
                                     <input name="submit" type="submit" value="Login" class="btn btn-success txt" />
