--- a/Views/Login/Profile.cshtml
+++ b/Views/Login/Profile.cshtml
@@ -210,12 +210,12 @@
 
                             <div class="form-group mb-3">
                                 <label class="txt">New Password</label>
-                                <input type="password" autocomplete="off" name="newpass" value=""
+                                <input type="password" autocomplete="off" minlength="6" name="newpass" value=""
                                        class="form-control txt" required>
                             </div>
                             <div class="form-group mb-3">
                                 <label class="txt">Confirm Password</label>
-                                <input type="password" autocomplete="off" name="conpass" value=""
+                                <input type="password" autocomplete="off" minlength="6" name="conpass" value=""
                                        class="form-control txt" required>
                             </div>
                             <div class="form-group mb-3" style="float: right;">
