admin login done

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -58,7 +58,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                             </ul>
-                            <a href="">
+                            <a href="/Admin/Logout">
                                 <button id="logoutbtn" name="logout" type="button" class="btn btn-danger navtext">
                                     Logout <i class="fa fa-sign-out"></i>
                                 </button>
