--- a/Views/Reservation/Book.cshtml
+++ b/Views/Reservation/Book.cshtml
@@ -59,7 +59,7 @@
                                         <div style="display: none;">
                                             <td></td>
                                         </div>
-                                        
+
                                         @if (Session["memberEmail"] != null)
                                         {
                                             <div class="form-group mb-3">
@@ -255,33 +255,60 @@
                                             <input type="text" autocomplete="off" id="checkouttime" name="checkout" value="" class="form-control frm" />
 
                                         </div>
-                                        <h4 class="bookheading" style="margin-top: 5%;">
-                                            Membership Information
-                                        </h4>
-                                        <hr style="border-color: black; opacity: 1; border-style:dashed; margin-bottom: 2.5%;" class="dropdown-divider">
-                                        <div class="form-group mb-3">
-                                            <div class="input-container">
-                                                <label for="exampleDataList" class="form-label txt">Do you want to be our member?</label>
-                                                <p id="roomdetailslink">(Extra charges may apply)*</p>
+                                        @if (Session["memberEmail"] != null)
+                                        {
+                                            <div style="display: none;">
+                                                <h4 class="bookheading" style="margin-top: 5%;">
+                                                    Membership Information
+                                                </h4>
+                                                <hr style="border-color: black; opacity: 1; border-style:dashed; margin-bottom: 2.5%;" class="dropdown-divider">
+                                                <div class="form-group mb-3">
+                                                    <div class="input-container">
+                                                        <label for="exampleDataList" class="form-label txt">Do you want to be our member?</label>
+                                                        <p id="roomdetailslink">(Extra charges may apply)*</p>
+                                                    </div>
+                                                    <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="memberyes">
+                                                        <label class="form-check-label text" for="flexRadioDefault1">
+                                                            Yes
+
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="memberno" checked>
+                                                        <label class="form-check-label text" for="flexRadioDefault2">
+                                                            No
+                                                        </label>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="memberyes">
-                                                <label class="form-check-label text" for="flexRadioDefault1">
-                                                    Yes
+                                        }
+                                        else
+                                        {
+                                            <h4 class="bookheading" style="margin-top: 5%;">
+                                                Membership Information
+                                            </h4>
+                                            <hr style="border-color: black; opacity: 1; border-style:dashed; margin-bottom: 2.5%;" class="dropdown-divider">
+                                            <div class="form-group mb-3">
+                                                <div class="input-container">
+                                                    <label for="exampleDataList" class="form-label txt">Do you want to be our member?</label>
+                                                    <p id="roomdetailslink">(Extra charges may apply)*</p>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="memberyes">
+                                                    <label class="form-check-label text" for="flexRadioDefault1">
+                                                        Yes
 
-                                                </label>
+                                                    </label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="memberno" checked>
+                                                    <label class="form-check-label text" for="flexRadioDefault2">
+                                                        No
+                                                    </label>
+                                                </div>
                                             </div>
-                                            <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="memberno" checked>
-                                                <label class="form-check-label text" for="flexRadioDefault2">
-                                                    No
-                                                </label>
-                                            </div>
-
-
-
-                                        </div>
-
+                                        }
                                         <script>
                                             document.getElementById("roomname").value = localStorage.getItem("roomType");
                                             document.getElementById("checkintime").value = localStorage.getItem("checkinTime");
