--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<GrandBlueResortandSpa.Models.BOOKING>
 @{
     ViewBag.Title = "Index";
     Layout = null;
@@ -90,30 +90,22 @@
                             </tr>
                         </thead>
                         <tbody>
+                            @foreach (var booking in Model)
+                            {
                             <tr>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>mdo</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>mdo</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>mdo</td>
-                                <td>Mark</td>
+                                <td>@booking.name</td>
+                                <td>@booking.gender</td>
+                                <td>@booking.email</td>
+                                <td>@booking.mobile</td>
+                                <td>@booking.nationalId</td>
+                                <td>@booking.dob</td>
+                                <td>@booking.nationality</td>
+                                <td>@booking.selectedroom</td>
+                                <td>@booking.checkin</td>
+                                <td>@booking.checkout</td>
                             </tr>
-                            <tr>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>fat</td>
-                                <td>Jacob</td>
-                            </tr>
+                            }
+                            
                         </tbody>
                     </table>
                 </div>
